--- a/package.json
+++ b/package.json
@@ -1,8 +1,21 @@
 {
-  "name": "node-redis-socketio-chat",
+  "name": "redis-chat-node-socketio",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "engines": {
+    "node": "14.x"
+  },
+  "cacheDirectories": [
+    "node_modules",
+    "client/node_modules",
+    ".next/cache"
+  ],
+  "scripts": {
+    "dev": "nodemon server/index.js",
+    "start": "node server/index.js",
+    "deploy": "git add . && git commit -m Build && git push && vercel --prod"
+  },
   "dependencies": {
     "@types/redis": "^2.8.28",
     "bcrypt": "^5.0.0",
@@ -16,10 +29,6 @@
     "node-random-name": "^1.0.1",
     "redis": "^3.0.2",
     "socket.io": "^3.0.4"
-  },
-  "scripts": {
-    "dev": "nodemon server/index.js",
-    "start": "node server/index.js"
   },
   "devDependencies": {
     "@types/socket.io": "^2.1.12",
